# EYTA

./: CMakeLists.txt  README.md  TODO  command_line_test  sknsh_unitig_distribution.xlsx
exonized_ALUs_missed_by_KS_in_MCF7/: exonized_ALUs  get_from_graph_merged.tr.mapping.0.original_the_mappings_containing_exonized_ALUs.py  transcripts_exonized_ALUs.fa
exonized_ALUs_missed_by_KS_in_MCF7/results_v1/: CHEK1  CMC2  COPB2  GDPGP1  NDUFA3  ZSWIM7  notes
naive_simulator/: create_naive_simulation.sh  separate_ensembl_transcripts_into_genes.py  simulate.py
scripts/: check_if_mapping_is_ok.py  check_if_two_fasta_files_are_equal.py
scripts/astalavista_scripts/: ASTALAVISTABubblesFoundByEYTA  ASTALAVISTABubblesFoundByEYTA.fixed_header.fa  ASTALAVISTABubblesFoundByEYTA_mappedAligned.sortedByCoord.out.bam  ASTALAVISTABubblesFoundByEYTA_mappedAligned.sortedByCoord.out.bam.bai  ASTALAVISTABubblesFoundByEYTA_mappedLog.final.out  ASTALAVISTABubblesNotFoundByEYTA  ASTALAVISTABubblesNotFoundByEYTA.fixed_header.fa  ASTALAVISTABubblesToBeFound  README  (+46 more)
tools/: CMakeLists.txt
tools/EYTA/src/: BoostGraphFilters.cpp  BoostGraphFilters.h  BranchingNaiveStrategy.cpp  BranchingNaiveStrategy.h  BranchingPlusBubbleGeneratorStrategy.cpp  BranchingPlusBubbleGeneratorStrategy.h  BranchingStrategy.cpp  BranchingStrategy.h  BubbleOutputter.cpp  BubbleOutputter.h  EnhanceTranscriptome.cpp  EnhanceTranscriptome.h  EnhanceTranscriptomeDefs.cpp  EnhanceTranscriptomeDefs.h  EnhanceTranscriptomeTool.cpp  EnhanceTranscriptomeTool.h  ExceptionWithFileAndLine.cpp  ExceptionWithFileAndLine.h  GraphOutput.h  HintsDrivenEnumerationStrategy.cpp  HintsDrivenEnumerationStrategy.h  MappingOutputter.cpp  MappingOutputter.h  SolidKmerOracle.cpp  SolidKmerOracle.h  Stats.cpp  Stats.h  Strategy.cpp  Strategy.h  Tests.cpp  Tests.h  UnitigCounter.cpp  UnitigCounter.h  UnitigLinkingGraph.cpp  UnitigLinkingGraph.h  Utils.cpp  Utils.h  build_dbg.cpp  build_dbg.hpp  debug.cpp  (+6 more)
(+522 files in other folders)
